# mcp_weather

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/mcp_server_weather/: __init__.py  __main__.py  server.py
test/: weather_server_test.py
