[project]
name = "mcp-server-weather"
version = "0.6.2"
description = "A Model Context Protocol server providing tools for weather queries for LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Zaki", email = "746753491@qq.com" },
]
keywords = ["weather", "mcp", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.32.3",
]

[project.scripts]
mcp-server-weather = "mcp_server_weather:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.8.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true